Added 3rd project
added 3rd project,
swapped UX work with product design work

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p class="body-text2 project-description">
                         I create user-friendly designs through various usability assessments such as <a class="underline" href="https://www.nngroup.com/articles/pure-method/">PURE</a>, SUS, and remote/on-site usability testing. My designs are feasible, thanks to my collaborative nature and knowledge of HTML/CSS.</p>
                         <br>
-                        <a class="button-secondary" href="dashboard-lock.html">
+                        <a class="button-secondary" href="agent-app-lock.html">
                             View UX projects
                         </a>
                     </div>
@@ -75,7 +75,7 @@
                         </div>
                         <p class="body-text2 project-description">I validate business ideas and create concepts that will deliver value using well-known methodologies such as the Double Diamond, Design Thinking, Lean UX, and Innovation Funnel.</p>
                         <br>
-                        <a class="button-secondary" href="design-system.html">
+                        <a class="button-secondary" href="dashboard-lock.html">
                             View product design projects
                         </a>
                     </div>
