Removed -lock for password website so navigation (refresh/back) works again

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -32,7 +32,7 @@
             
             docReady(function() 
             {
-                history.replaceState({}, null, "/agent-app")
+                history.replaceState({}, null, "/agent-app.html")
             });
         </script>
     </head>
