--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -32,7 +32,7 @@
             
             docReady(function() 
             {
-                history.replaceState({}, null, "/dashboard")
+                history.replaceState({}, null, "/dashboard.html")
             });
         </script>
     </head>
