--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -30,7 +30,7 @@
             
             docReady(function() 
             {
-                history.replaceState({}, null, "/hydrogen")
+                history.replaceState({}, null, "/hydrogen.html")
             });
         </script>
     </head>
