3-column layout added

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -60,11 +60,13 @@
                 <br><br>
 
                 <p class="body-text bold">
-                    CONTRIBUTION
+                    WHAT I DID
                 </p>
 
                 <p class="body-text2">
                     User research<br>
+                    Usability testing<br>
+                    Research Ops<br>
                     UX/UI design<br>
                 </p>
             </div>
@@ -89,16 +91,33 @@
                     While the app had been up and running for 2 years, no feedback had been gathered, and no UX improvements had been made. The app looked rough and difficult to use.
                     <br><br>
                     Our design team wanted to turn this to an opportunity to advocate human-centered design by starting user research. I wanted to listen to the end-user’s feedback and made design decisions based on that. As a team, we also wanted to establish a user research ritual that we can continue following in the future.
-                    <br><br>
-                    However, there were a number of challenges we had to overcome.
-                    <br><br>
-                    • How do we pitch to the business to support us to start any form of usability testing while it had never been done before?
-                    <br><br>
-                    • How might we effectively facilitate a remote usability test for a mobile application, while looking at both of the participant and the app?
-                    <br><br>
-                    • How might we effectively record the remote usability test session for our research repository?
                 </p>
+
+            <div class="padded-boxes">
+                <section>
+                    <p class="body-text2 circle bold heading">1</p>
+                    <div class="padded">
+                        <!-- box 1 content -->
+                        How do we pitch to the business to support us to start any form of usability testing while it had never been done before?
+                    </div>
+                </section>
+                <section>
+                    <p class="body-text2 circle bold heading">2</p>
+                    <div class="">
+                        <!-- box 2 content -->
+                        How might we effectively facilitate a remote usability test for a mobile application, while looking at both of the participant and the app?
+                    </div>
+                </section>
+                <section>
+                    <p class="body-text2 circle bold heading">3</p>
+                    <div class="padded">
+                        <!-- box 3 content -->
+                        How might we effectively record the remote usability test session for our research repository?
+                    </div>
+                </section>
             </div>
+
+        </div>
 
 
             <div class="container col8-width">
@@ -114,7 +133,7 @@
                 <img class= "round-corner" src="/Assets/agent-app/research/pure-table.png">
             </div>
             
-            <div class="container col8-width">
+            <div class="container col8-width center-content">
                 <p class="h1 regular">
                     Starting small but surely<br>
                     — Sending out simple surveys to collect quantified results
@@ -125,6 +144,7 @@
                     We also assessed customer satisfaction by asking our users to rate the app on a scale of 1 to 5.
                     <br><br><br><br>                   
                     <img src="/Assets/agent-app/research/sus-sheet.png" width="50%">
+                    <br><br><br><br>
                     As expected, the result did not look any good.
                     <br><br><br><br>
                     <img src="/Assets/agent-app/research/agent-app-sus.png">
@@ -158,7 +178,11 @@
                 </p>
 
                     <img src="/Assets/agent-app/research/research-setup.png">
+                    <p class="caption">This was the setup.</p>
+                    <br>
                     <img src="/Assets/agent-app/research/interview-scene.png">
+                    <p class="caption">This was how the interview looked.</p>
+                    <br>
             </div>
 
 
