--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="container col8-width center" id="about">
                 <p class="hero">
                 Hi, I am Suhwa.<br>
-                I am a product designer with strong UX skills
+                I am a lead product designer with strong UX skills
                 </p>
                 <p class="body-text">With over 8 years of hands-on experience, I create products and product strategies that place users at the center, resulting in valuable products for both customers and the business. I achieve this by establishing a solid understanding of the users through qualitative and quantitative data.
                 <br>
