Center SUS images

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -142,12 +142,16 @@
                     After establishing that our app wasn’t anywhere where we wanted to be, we gained more traction to validate the bad usability with the end-users. This time, the System Usability Scale (SUS) was used to evaluate the product usability quantitatively. We sent out a spreadsheet to 10 of our users.
                     <br><br>
                     We also assessed customer satisfaction by asking our users to rate the app on a scale of 1 to 5.
-                    <br><br><br><br>                   
-                    <img src="/Assets/agent-app/research/sus-sheet.png" width="50%">
+                    <br><br><br><br>  
+                    <div class="align-center">                
+                        <img src="/Assets/agent-app/research/sus-sheet.png" width="50%">
+                    </div>
                     <br><br><br><br>
                     As expected, the result did not look any good.
                     <br><br><br><br>
-                    <img src="/Assets/agent-app/research/agent-app-sus.png">
+                    <div class="align-center">
+                        <img src="/Assets/agent-app/research/agent-app-sus.png">
+                    </div>
                     <br><br>
                     *“OK, we get it. The usability is bad. What do we do now?”*
                     <br><br>
