--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -164,11 +164,18 @@
 
             <div class="container full-width align-center">
                 <p class="h1 regular align-center">
-                    UI/UX DESIGN
+                    UX/UI DESIGN
                 </p>
-                <img class= "full-width round-corner align-center" src="/Assets/dashboard/dd-design.png"><br>
-                <img class= "col8-width round-corner align-center" src="/Assets/dashboard/dashboard-design.png">
-
+                <div class="video-mask align-center">
+                    <video width="100%" loop autoplay muted preload="auto">
+                      <source src="/Assets/dashboard/dashboard-video.mp4" type="video/mp4">
+                      <!-- <source src="movie.ogg" type="video/ogg"> do I need to include OGG !-->
+                      Your browser does not support the video tag.
+                    </video>
+                </div>
+                <br>
+                <img class= "full-width round-corner align-center" src="/Assets/dashboard/dashboard-all-graphs-angled.png"><br>
+                <img class= "col8-width round-corner align-center" src="/Assets/dashboard/dashboard-full-screen.png"><br>
             </div>
 
 
@@ -184,6 +191,10 @@
                 </p>
             </div>
             <img class= "round-corner center full-width-width" src="/Assets/dashboard/serviceBlueprint.jpg">
+            <video width="100%" loop autoplay muted preload="auto">
+                <source src="dashboard-video.mp4" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
 
 
 
