--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -187,7 +187,7 @@
             
             <div class="video-mask align-center">
                 <video width="100%" height="100%" disablepictureinpicture playsinline poster loop autoplay muted preload="auto">
-                  <source src="/Assets/dashboard/dashboard-video.mp4" type="video/mp4">
+                  <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
                   <!-- <source src="movie.ogg" type="video/ogg"> do I need to include OGG !-->
                   Your browser does not support the video tag.
                 </video>
