Updated all project titles

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -53,8 +53,7 @@
         <div class="window">
             <div class="container col8-width">
                 <p class="hero no-margin">
-                UX design<br>
-                Carepay Agent App Redesign
+                Advocating Human-Centric Design in a Low UX Maturity Environment for Informed Decision-Making
                 </p>
                 <p class="body-text2"> Fostering and developing a user research practice that leads to an enhanced user experience by making informed decisions.</p>
                 <br><br>
