--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -51,8 +51,7 @@
         <div class="window">
             <div class="container col8-width">
                 <p class="hero no-margin">
-                Service design:<br>
-                Hydrogen Power Plant Operation
+                Designing Services and Product Strategies for Complex Contexts
                 </p>
                 <p class="body-text2">Using Service Design Methodology to develop rough ideas to clear product roadmap, leading to digital product design ensuring operational efficiency of the emergent green hydrogen power plant.</p>
 
