--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -53,8 +53,7 @@
         <div class="window">
             <div class="container col8-width">
                 <p class="hero no-margin">
-                Product design:<br>
-                Dashboard for Innovation
+                Creating a Dashboard from Scratch to Visualize Complex Data
                 </p>
                 <p class="body-text2"> Creating a beautiful and functional dashboard that displays innovation projects within the innovation funnel, enabling innovation managers to track progress and enhance their exposure.</p>
                 <br><br>
