edited contribution for all prjs

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -63,10 +63,12 @@
                 </p>
 
                 <p class="body-text2">
-                    User research<br>
-                    Usability testing<br>
-                    Research Ops<br>
-                    UX/UI design<br>
+                    • Leveraging expert review methods<br>
+                    • Generating buy-in for further research<br>
+                    • Planning & moderating user interviews<br>
+                    • Planning & moderating user interviews<br>
+                    • Setting up research ops<br>
+                    • Redesigned Android application<br>
                 </p>
             </div>
 
