--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/dashboard.html
@@ -59,13 +59,15 @@
                 <br><br>
 
                 <p class="body-text bold">
-                    CONTRIBUTION
+                    WHAT I DID
                 </p>
 
                 <p class="body-text2">
-                    Design team lead<br>
-                    Research<br>
-                    UX/UI design<br>
+                    • Leading a design team<br>
+                    • Coaching junior designers<br>
+                    • Planning & executing user research<br>
+                    • UX/UI design<br>
+                    • Setting up a design system<br>
                 </p>
             </div>
 
