--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -58,14 +58,15 @@
                 <br><br>
 
                 <p class="body-text bold">
-                    CONTRIBUTION
+                    WHAT I DID
                 </p>
 
                 <p class="body-text2">
-                    Service design<br>
-                    Workshop facilitation<br>
-                    UX/UI design<br>
-                    Product Roadmapping<br>
+                    • Delivering service design via service blueprint<br>
+                    • Workshop facilitation<br>
+                    • Creating product Roadmap<br>
+                    • UX/UI design for web application<br>
+
                 </p>
                 </div>
 
