content update-app prj

--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -53,7 +53,7 @@
         <div class="window">
             <div class="container col8-width">
                 <p class="hero no-margin">
-                Advocating Human-Centric Design in a Low UX Maturity Environment for Informed Decision-Making
+                Advocating Human-Centric Design in a Low UX Maturity Environment
                 </p>
                 <p class="body-text2"> Fostering and developing a user research practice that leads to an enhanced user experience by making informed decisions.</p>
                 <br><br>
@@ -66,7 +66,7 @@
                     • Leveraging expert review methods<br>
                     • Generating buy-in for further research<br>
                     • Planning & moderating user interviews<br>
-                    • Planning & moderating user interviews<br>
+                    • Planning & moderating usability tests<br>
                     • Setting up research ops<br>
                     • Redesigned Android application<br>
                 </p>
