--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -86,7 +86,7 @@
 
             <div class="container col8-width">
                 <p class="h1 regular">
-                    OUTCOMES<br>
+                    OUTPUTS<br>
                 </p>
                 <p class="body-text bold no-margin">
                 Future-state Service blueprint</p>
@@ -184,10 +184,13 @@
                     <span class="body-text bold">UX decision</span><br><br>
                     In our conversations, the client kept using several units  — Wattage, ton, kg, cubic meter, liter, etc — interchangeably. That was because electricity converts to power to certain amount of hydrogen, and pressurized hydrogen can be measured by weight but also by volume (at a certain pressure). But this was very confusing to non-technical party. so we made a decision to stick to one unit (kg) during our discussion.
                 </p>
+                <br><br>
                 <p class="body-text2">
                     <span class="body-text bold">Client thinks in ‘human-centric’ manner</span><br><br>
                     For example, while the system’s backend is based on the 36 hour cycle optimised for the current energy market schedule, a decision was made to show a 24 hour cycle when it comes to product UIs which is more natural & intuitive for human to interpret, which also fits better with 8-hour employee work shift.
                 </p>
+                <br><br>
+
                 <p class="body-text2">
                     <span class="body-text bold">Better way of working</span><br><br>
                     Service blueprint serving as a central documentation providing clarity improving discussions & alignment.
@@ -199,10 +202,12 @@
                     <span class="body-text bold">New product roadmap with new priorities</span><br><br>
                     Realising massive scope leading to creating a new roadmap, facilitating an agreement to readjust the project schedule and scope.
                 </p>
+                <br><br>
                 <p class="body-text2">
                     <span class="body-text bold">Clear understanding of the product ecosystem</span><br><br>
                     Established a good understanding of the product ecosystem which consists of multiple products. Each of products were accompanied by an agreed definition and its target users.
                 </p>
+                <br><br>
                 <p class="body-text2">
                     <span class="body-text bold">Gaps addressing the need for a new role</span><br><br>
                     Identified gaps in business requirements to create a successful product ecosystem, which resulted in a new hire (BA).
@@ -231,11 +236,10 @@
                     REFLECTION
                 </p>
                 <p class="body-text2">
-                    • Importance of digestible documentation / materials (e.g. Service blueprint) crucial for alignment especially in a complex business context.<br>
-                    • Do not take the project timeline for granted if the context isn’t well-known yet → successful Expectation management. <br>
-                    • Not to rush into the whole scope of research & design in 4 weeks time → Better planning for quality deliverables & team’s morale. <br>
-                    • Hard to access B2B client for interviews. <br>
-                    • I learned even more about myself how much I enjoy taking a new challenge in an unknown area and learn new things. <br>
+                    • The importance of easily understandable documentation, like a service blueprint, is pivotal for achieving alignment, particularly within complex business environments.<br><br>
+                    • It's essential not to underestimate the project timeline when dealing with unfamiliar contexts. This approach is key to effective expectation management. <br><br>
+                    Rather than hurrying through the entire research and design process within a tight 4-week timeframe, there's a need for better planning to ensure high-quality deliverables and maintain the team's morale. <br><br>
+                    • This experience reinforced my appreciation for taking on new challenges in unfamiliar domains and constantly learning. <br><br>
                 </p>
             </div>
             <!-- 
