--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -217,18 +217,19 @@
 
             <div class= "container full-width align-center">
                 <p class="h1 regular align-center">
-                    OUTCOMES
+                    OUTPUTS
                 </p>
                 <p class="h3">PRODUCT ROADMAP</p>
                 <img class= "col8-width align-center" src="/Assets/hydrogen/roadmap.png">
+                <p class="caption">Based on the new agreement, I created a product roadmap.</p>
+                <br><br><br><br><br>
 
-                <p class="h3 no-margin">DESIGN DELIVERABLES - MVP</p>
+                <p class="h3 no-margin">DESIGN DELIVERABLES</p>
                 <div class="container col8-width no-padding">
                     <p class="body-text2">UX design was delivered based on the newly agreed scope, addressing various archetypes’ needs to help them to meet their objectives.</p>
                 </div>
-                <img class= "col8-width round-corner align-center" src="/Assets/hydrogen/design.png">
             </div>
-
+            <img class= "full-width round-corner align-center" src="/Assets/hydrogen/hydrogen-screens.png">
 
 
             <div class="container col8-width">
@@ -236,9 +237,8 @@
                     REFLECTION
                 </p>
                 <p class="body-text2">
-                    • The importance of easily understandable documentation, like a service blueprint, is pivotal for achieving alignment, particularly within complex business environments.<br><br>
-                    • It's essential not to underestimate the project timeline when dealing with unfamiliar contexts. This approach is key to effective expectation management. <br><br>
-                    Rather than hurrying through the entire research and design process within a tight 4-week timeframe, there's a need for better planning to ensure high-quality deliverables and maintain the team's morale. <br><br>
+                    • In unfamiliar contexts, understanding and planning before taking action are vital. This approach is essential for effective expectation management and ensuring the delivery of high-quality results that provide value to both users and the client, while also maintaining the team's morale.<br><br>
+                    • The importance of easily understandable documentation, like a service blueprint, is pivotal for achieving alignment, particularly within complex contexts.<br><br>
                     • This experience reinforced my appreciation for taking on new challenges in unfamiliar domains and constantly learning. <br><br>
                 </p>
             </div>
