--- a/not-work.html
+++ b/not-work.html
@@ -34,7 +34,7 @@
             <!-- 01 -->
             <div class="container">
                 <div class="half-width center">
-                    <span class="index">01</span><span class="h1">Risograph</span>
+                    <p class="h1">01 | Risograph</p>
                     <img src="Assets/not-work/risograph/risograph-visit-amsterdam-green-border.jpg">
                     <img src="Assets/not-work/risograph/risograph-visit-amsterdam-blue-border.jpg">
                 </div>
