--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/agent-app.html
@@ -154,7 +154,15 @@
                         <img src="/Assets/agent-app/research/agent-app-sus.png">
                     </div>
                     <br><br>
-                    *“OK, we get it. The usability is bad. What do we do now?”*
+
+                    <div class= "align-center">
+                        <p class="h3 light" style="line-height:2rem;">
+                        “OK, we get it.<br>
+                        The usability is bad.<br>
+                        What do we do now?”
+                        </p>
+                    </div>
+
                     <br><br>
                     We finally got our chance to conduct a user research to dive into all the usability problems and UX issues with our end-users.
                 </p>
@@ -167,10 +175,11 @@
                 </p>
                 <p class="body-text2">
                     As a seasoned designer, I have done various user research in my career. However, COVID-19 brought many challenges to the conventional testing methods. Because I couldn't fly to Africa to meet the user nor hand over a test device in a laboratory setup, usability testing had to adapt.
+                    <br><br><br><br>
+                    <img class= "round-corner center" src="/Assets/agent-app/illustrations/research-setup.webp" style="max-width:600px;">
                     <br><br>
-                    <img class= "round-corner" src="/Assets/agent-app/illustrations/research-setup.webp">
                     Because we had to test an app remotely, it complicated the research setup furthermore.
-                    <br><br>
+                    <br><br><br><br>
                     • The researcher needs to see both of the app & participant.
                     <br>
                     • Because of this, we needed to use Team viewer to see the app, in addition to Zoom to see the participant.
@@ -181,6 +190,7 @@
                     <br><br>
                     In the end, I came up with a setup that enabled me and the team to talk to users in remote places.
                 </p>
+                <br><br><br><br>
 
                     <img src="/Assets/agent-app/research/research-setup.png">
                     <p class="caption">This was the setup.</p>
@@ -199,7 +209,7 @@
                     Based on the learnings of the user research, I made major design changes to improve the usability and user experience of the app.
                 </p>
 
-                <p class="h3 regular">To help the less tech-savvy agents using the app, brief onboarding tutorials were added.</p>
+                <p class="body-text2">To help the less tech-savvy agents using the app, <span class="bold">brief onboarding tutorials</span> were added.</p>
 
             </div>
 
@@ -210,7 +220,8 @@
 
             <div class="container col8-width">
                 <p class="body-text2">
-                    The home page was restructured to show the statuses of registrations at glance. Throughout the registration process, simple and clear guidelines were added to reduce human errors when filling out a lengthy registration form for a health scheme.
+                    The home page was restructured to <span class="bold">show the statuses of registrations</span> at glance.<br><br>
+                    Throughout the registration process, <span class="bold">clear hint texts, error and confirmation messages</span> were added to reduce human errors when filling out a lengthy registration form for a health scheme.
                 </p>
             </div>
 
