--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <p class="body-text2 project-description">
                         I create user-friendly designs through various usability assessments such as <a class="underline" href="https://www.nngroup.com/articles/pure-method/">PURE</a>, SUS, and remote/on-site usability testing. My designs are feasible, thanks to my collaborative nature and knowledge of HTML/CSS.</p>
                         <br>
-                        <a class="button-secondary" href="agent-app.html">
+                        <a class="button-secondary" href="work.html#ux">
                             View UX projects
                         </a>
                     </div>
@@ -75,7 +75,7 @@
                         </div>
                         <p class="body-text2 project-description">I validate business ideas and create concepts that will deliver value using well-known methodologies such as the Double Diamond, Design Thinking, Lean UX, and Innovation Funnel.</p>
                         <br>
-                        <a class="button-secondary" href="dashboard.html">
+                        <a class="button-secondary" href="work.html#product-design">
                             View product design projects
                         </a>
                     </div>
@@ -90,7 +90,7 @@
                         </div>
                         <p class="body-text2 project-description">I wear multiple hats, serving as a researcher to discover unmet needs, a design thinker to brainstorm ideas, and a strategist to translate them into valuable projects—all to optimize your customer journey and bring value to your business.</p>
                         <br>
-                        <a class="button-secondary" href="hydrogen.html">
+                        <a class="button-secondary" href="work.html#service-design">
                             View service design projects
                         </a>
                     </div>                  
