--- a/agent-app.html
+++ b/agent-app.html
@@ -13,7 +13,7 @@
         <div class="protected">
             <div class="protected__alert" data-id="alert">You entered the wrong password</div>
             <div class="protected__content">
-                <h1 class="protected__content__heading">Enter a password. You can find the password in my CV.</h1>
+                <h1 class="protected__content__heading">Enter a password.<br>You can find the password in my CV.</h1>
                 <input class="protected__content__input" data-id="password" type="password" placeholder="password" autofocus />
                 <button data-id="button" type="button" class="protected__content__btn">Continue</button>
             </div>
