--- a/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
+++ b/1027c51e79ddee14c478ca32ea428d5f4d3defdf0fae027c64de1b8272177ce0/hydrogen.html
@@ -39,8 +39,8 @@
     
     <body>
         <div class="menu-ul" id="menu">
-                <a href="/index.html#about">HOME</a>
-                <a href="/index.html#work">WORK</a>
+                <a href="/index.html">HOME</a>
+                <a href="/work.html">WORK</a>
                 <a href="/not-work.html">NOT WORK</a>
                 <a href="/index.html#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
