--- a/not-work.html
+++ b/not-work.html
@@ -19,9 +19,9 @@
     
     <body>
         <div class="menu-ul" id="menu">
-                <a href="index.html#about">HOME</a>
-                <a href="index.html#work">WORK</a>
-                <a href="not-work.html">NOT WORK</a>
+                <a href="/index.html">HOME</a>
+                <a href="/work.html">WORK</a>
+                <a href="/not-work.html">NOT WORK</a>
                 <a href="#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
                 <img class="img no-margin" src="Assets/home/icon-menu.svg">
