Update Work page and assets

--- a/work.html
+++ b/work.html
@@ -24,7 +24,7 @@
     <body>
         <div class="menu-ul" id="menu">
                 <a href="index.html#about">HOME</a>
-                <a href="index.html#work">WORK</a>
+                <a href="work.html">WORK</a>
                 <a href="not-work.html">NOT WORK</a>
                 <a href="#footer">CONTACT</a>
                 <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
@@ -46,8 +46,8 @@
                 <!-- col 1 -->
                 <a class="project-box hover-opaque" href="agent-app.html">        
                     <div class="hover-image-div">
-                        <img class="no-margin round-corner" src="Assets/home/UX.png">
-                        <img class="no-margin round-corner img-hover" src="Assets/home/UX-hover.png">
+                        <img class="no-margin round-corner" src="/Assets/work/thumbnail-agent-app.png">
+                        <img class="no-margin round-corner img-hover" src="/Assets/work/thumbnail-agent-app-hover.png">
                     </div>
 
                     <p class="body-text bold project-description">
@@ -61,8 +61,8 @@
 
                 <a class="project-box hover-opaque" href="digitalshop.html">                     
                     <div class="hover-image-div">
-                        <img class="no-margin round-corner" src="Assets/home/ProductDesign.png">
-                        <img class="no-margin round-corner img-hover" src="Assets/home/ProductDesign-hover.png">
+                        <img class="no-margin round-corner" src="/Assets/work/thumbnail-digitalshop.png">
+                        <img class="no-margin round-corner img-hover" src="/Assets/work/thumbnail-digitalshop-hover.png">
                     </div>
 
                     <p class="body-text bold project-description">
@@ -77,12 +77,12 @@
             <div class="container no-padding" style="max-width:1440px;" id="product-design">
             <p class="h1">Product Design Projects</p></div>
             
-            <div class="flex-container" id="work" style="padding-top:0px;">     
+            <div class="flex-container" style="padding-top:0px;">     
                 <!-- col 1 -->
                 <a class="project-box hover-opaque" href="dashboard.html">                     
                     <div class="hover-image-div">
-                        <img class="no-margin round-corner" src="Assets/home/UX.png">
-                        <img class="no-margin round-corner img-hover" src="Assets/home/UX-hover.png">
+                        <img class="no-margin round-corner" src="/Assets/work/thumbnail-dashboard.png">
+                        <img class="no-margin round-corner img-hover" src="/Assets/work/thumbnail-dashboard-hover.png">
                     </div>
 
                     <p class="body-text bold project-description">
@@ -102,8 +102,8 @@
                 <!-- col 1 -->
                 <a class="project-box hover-opaque" href="hydrogen.html">                     
                     <div class="hover-image-div">
-                        <img class="no-margin round-corner" src="Assets/home/UX.png">
-                        <img class="no-margin round-corner img-hover" src="Assets/home/UX-hover.png">
+                        <img class="no-margin round-corner" src="/Assets/work/thumbnail-hydrogen.png">
+                        <img class="no-margin round-corner img-hover" src="/Assets/work/thumbnail-hydrogen-hover.png">
                     </div>
 
                     <p class="body-text bold project-description">
