--- a/digitalshop.html
+++ b/digitalshop.html
@@ -13,6 +13,7 @@
         <link rel="icon" href="/poppy.ico"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">       
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script type="text/javascript" src="/app.js"></script>
     </head>
     
     <body>
