--- a/work.html
+++ b/work.html
@@ -53,7 +53,7 @@
                     <p class="body-text bold project-description">
                     Advocating Human-Centric Design in a Low UX Maturity Environment
                     </p>
-                    <p class="body-text2 project-description">
+                    <p class="body-text2 project-description no-margin">
                     Fostering and developing a user research practice that led to an enhanced app experience by making informed decisions.</p>
                 </a>
 
@@ -67,7 +67,7 @@
 
                     <p class="body-text bold project-description">
                     Designing a better product by facilitating a collaborative design workshop grounded in user insights</p>
-                    <p class="body-text2 project-description">
+                    <p class="body-text2 project-description no-margin">
                     How leveraged the insights to foster a human-centric design with various stakeholders, enabling us to make informed decisions for designing a better product.</p>
                 </a>
             </div>
@@ -87,7 +87,7 @@
 
                     <p class="body-text bold project-description">
                     Creating a Dashboard from Scratch to Visualize Complex Data</p>
-                    <p class="body-text2 project-description">
+                    <p class="body-text2 project-description no-margin">
                     Creating a beautiful and functional dashboard that displays innovation projects within the innovation funnel, enabling innovation managers to track progress and enhance their exposure.
                     </p>
                 </a>
@@ -108,7 +108,7 @@
 
                     <p class="body-text bold project-description">
                     Designing Services and Product Strategies for Complex Contexts</p>
-                    <p class="body-text2 project-description">
+                    <p class="body-text2 project-description no-margin">
                     Using Service Design Methodology to develop rough ideas to clear product roadmap, leading to digital product design ensuring operational efficiency of the emergent green hydrogen power plant.</p>
                 </a>
             </div>
