--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             <p class="hero regular align-center">
                 I AM KNOWN AS
             </p>
-            <p class="h1 light full-width align-center no-margin compact center">
+            <p class="h1 light full-width align-center no-margin center">
                 Hard Working • Responsible • Collaborative • Structured • Transparent • Foodie • Spicy • Morning Person • Bouldering • Gardener • Curious • Meticulous • Home Chef • Adaptable • Planning • Crafty • Critical • Kimchi 🥬
             </p>
             <br><br><br><br><br><br><br><br><br><br>
